[#531]  typeHwithColor asset, bgcrsselect asset

--- a/Mohaeng/Mohaeng/Sources/Cells/CourseLibraryCollectionVIew/CourseLibraryCollectionViewCell.xib
+++ b/Mohaeng/Mohaeng/Sources/Cells/CourseLibraryCollectionVIew/CourseLibraryCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -45,7 +45,7 @@
                                 <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="typeHwithColor" translatesAutoresizingMaskIntoConstraints="NO" id="8xM-Ca-p4y">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueLibraryImage" translatesAutoresizingMaskIntoConstraints="NO" id="8xM-Ca-p4y">
                                 <rect key="frame" x="142.5" y="102" width="69" height="68"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68" id="TF9-Zh-nAh"/>
@@ -145,9 +145,9 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="blueLibraryImage" width="68" height="68"/>
         <image name="btnSide" width="12" height="12"/>
         <image name="courseLibraryBubbleImage" width="8" height="7"/>
-        <image name="typeHwithColor" width="76" height="76"/>
         <namedColor name="Black1Text">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
